src/test/deca/context/valid/operation-unaire-minus-int.deca
// Description:
//    operation unaire minus sur un int
//
// Resultats:
//    //

//
// Historique:
//    cree le 06/01/2023

{
    -2;
}