src/test/deca/context/invalid/operation-binaire-multiply-wrong.deca
// Description:
//    Test 3.33 fail avec multiply 
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : The left operand of an arithmetical operation has to be an int or a float (rule 3.33)
//
// Historique:
//    cree le 06/01/2023

{
    "hello world" * 2;
}